# VAIC2026_Charcalavong

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  brainstorm.md  create-modal-state.md  ecosystem.config.cjs  vaic-pitch-deck.html
_bmad/: config.toml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14c1e4b3d640_merge_heads_agent_target_file_upload_.py  34cd8281e2b3_create_audit_trail_table.py  7e8b08b45590_create_agents_rls.py  82478b8e9fea_create_tools_rls.py  9e84be8908a0_create_kb_documents_rls.py  a1b2c3d4e5f6_reshape_tools_catalog.py  a7b8c9d0e1f2_restore_audit_trail_compat.py  b2c3d4e5f6a7_reshape_kb_store_grants.py  b7a2d4e91f30_audit_v2_trace_sessions.py  baseline_0001_schema.sql  baseline_0001_squashed_schema.py  c1d2e3f4a5b6_add_kb_documents_content.py  c76b8fc3ef08_merge_audit_v2_trace_evaluation_into_.py  d5e6f7a8b9c0_add_run_status_completed_with_failures.py  dbbf3cb533e9_create_api_integrations_rls.py  f7a8b9c0d1e2_grant_delete_graph_authoring_tables.py
backend/alembic/versions_archive/: 1ad51bb8e8cb_create_workflows_rls.py  2848501cd966_shared_pool_reshape.py  39dfa51cec0c_create_workflow_runs_tasks_rls.py  5d11ee08a690_add_agents_model_jsonb_column.py  README.md  a11kbcontent01_add_kb_documents_content.py  a466fb9b53c6_create_tenants_users_departments_rls.py  aa10database01_create_mini_app_databases.py  ac10notify01_create_notifications.py  ac20actions01_create_actions.py  ad30agenttarget01_action_binding_agent_target.py  b8c9d0e1f2a3_create_persistent_chat.py  (+8 more)
backend/app/: __init__.py  main.py
backend/scripts/: __init__.py  bootstrap_auto_loan_demo.py  bootstrap_demo_agents_workflow.py  bootstrap_demo_tenant.py  demo_agent_specs.py  demo_seed_agents.py  demo_seed_workflow.py  run_evaluation_worker.py  run_worker.py  seed_audit_demo.py  smoke_fpt_llm.py  smoke_gemini_llm.py
backend/tests/: __init__.py
(+621 files in other folders)
