[project]
name = "vaic-backend"
version = "0.1.0"
description = "VAIC — Vietnamese banking AI-agent platform backend"
requires-python = ">=3.13,<3.14"
readme = "../README.md"
dependencies = [
    # Web framework
    "fastapi~=0.139.0",
    "uvicorn[standard]>=0.32",
    "starlette>=0.46",
    # ORM + DB driver (sync per architecture spine)
    "sqlalchemy~=2.0",
    "psycopg[binary]>=3.2",
    # Migrations
    "alembic>=1.14",
    # Validation / settings
    "pydantic~=2.0",
    "pydantic-settings>=2.6",
    # Background jobs + Redis
    "arq>=0.26",
    "redis>=5.2",
    # LLM adapters (Stories 1.6+)
    "anthropic==0.114.0",
    "openai>=1.60",
    # Chat attachment extraction (raw documents never leave the backend).
    "pypdf>=5.7",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    # google-genai is optional — uncomment when a team brings Google keys
    # "google-genai>=0.8",
    # MCP client (Stories 1.4+, 2.6) — pin to v1; v2.0.0 due 2026-07-28
    "mcp~=1.0",
    # Auth (Story 1.3)
    "passlib[argon2]>=1.7",
    "python-jose[cryptography]>=3.3",
    "psutil>=7.2.2",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-passlib>=1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "_bmad", "_bmad-output"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
exclude = "_bmad(/|$)|_bmad-output(/|$)"
